--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+body {
+    font-family: Roboto, sans-serif;
+    margin: 0;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -9,62 +14,58 @@ a {
 }
 
 a:visited {
-    color: #696969;
+    color: white;
 }
 
-a:hover {
-    color: #B43757;
-}
 
 button {
-    padding: 8px 24px;
+    padding: 8px 32px;
     font-family: Roboto, sans-serif;
     color: white;
+    font-size: 16px;
     border: none;
     border-radius: 8px;
     background: #3882f6;
   }
 
-.footer-img {
-    background-color: white;
-    clip-path: circle(40%);
-
-}
-
 .logo {
-    width: 70px;
-    height: auto;
+    color: white;
+    padding: 0;
+    margin: 0;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
+    background-color: #1f2937;
     padding: 20px;
+    
 }
 
 .header-links {
     font-size: 18px;
-    color: #696969;
+    color: white;
     display: flex;
     gap: 16px;
 }
 
 .title {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: #B43757;
+    color: white;
     font-size: 48px;
     font-weight: bolder;
 }
 
 .subtext {
     font-size: 24px;
-    color: black;
+    color: #e5e7eb;
 }
 
 .content {
+    padding: 60px 0px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #1f2937;
     gap: 20px;
 }
 
@@ -73,12 +74,24 @@ button {
     flex-direction: column;
     align-items: flex-start;
     width: 600px;
-    gap: 10px;
+    gap: 16px;
 }
 
 .title-pic {
-    width: 400px;
+    width: 500px;
     height: auto;
+}
+
+.project {
+    font-size: 36px;
+    font-weight: bolder;
+    display: flex;
+    justify-content: center;
+    padding: 40px;
+}
+
+.project-cards {
+    display: flex;
 }
 
 .footer {
