--- a/index.css
+++ b/index.css
@@ -92,9 +92,29 @@ button {
 
 .project-cards {
     display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    text-align: center;
+}
+
+.card-img {
+    width: 300px;
+    height: auto;
+    border: 4px solid black;
+    border-radius: 25px;
+}
+
+.card-text {
+    padding: 0px;
+    margin: 0px;
 }
 
 .footer {
     background-color: #B43757;
 }
-
