--- a/index.css
+++ b/index.css
@@ -122,8 +122,7 @@ button {
     align-items: center;
     justify-content: center;
     background-color: #e5e7eb;
-    height: 300px;
-    padding: 0px 200px;
+    padding: 80px 200px;
 }
 
 .quote {
@@ -138,15 +137,38 @@ button {
     align-self: flex-end;
 }
 
-.action {
+.action-section {
+    padding: 50px 300px;
+}
+
+.action-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     background-color: #3882f6;
-    width: 500px;
+    padding: 40px 80px;
+    border-radius: 10px;
+}
+
+.action-title {
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.action-subtext {
+    color: #e5e7eb;
 }
 
 .footer {
     display: flex;
+    justify-content: center;
+    color: white;
     background-color: #1f2937;
+    padding: 40px 0px;
+}
+
+
+.sign-up {
+    border: 3px solid white;
 }
